From Gilbert Hoyek <gil_hoyek@hotmail.com>: support for capturing SS7 traffic on Intel Septel cards, and for filtering on SS7 MTP3 fields.
Clean up indentation.

--- a/config.h.in
+++ b/config.h.in
@@ -53,6 +53,9 @@
 /* define if you have a /proc/net/dev */
 #undef HAVE_PROC_NET_DEV
 
+/* define if you have a Septel API */
+#undef HAVE_SEPTEL_API
+
 /* Define to 1 if you have the `snprintf' function. */
 #undef HAVE_SNPRINTF
 
