--- a/configure.in
+++ b/configure.in
@@ -1,4 +1,4 @@
-dnl @(#) $Header: /tcpdump/master/libpcap/configure.in,v 1.120.2.8 2006-04-07 07:08:50 guy Exp $ (LBL)
+dnl @(#) $Header: /tcpdump/master/libpcap/configure.in,v 1.120.2.9 2006-09-25 18:06:00 guy Exp $ (LBL)
 dnl
 dnl Copyright (c) 1994, 1995, 1996, 1997
 dnl	The Regents of the University of California.  All rights reserved.
@@ -6,7 +6,7 @@ dnl
 dnl Process this file with autoconf to produce a configure script.
 dnl
 
-AC_REVISION($Revision: 1.120.2.8 $)
+AC_REVISION($Revision: 1.120.2.9 $)
 AC_PREREQ(2.50)
 AC_INIT(pcap.c)
 
@@ -574,6 +574,7 @@ if test $ac_cv_lbl_dag_api = yes; then
 
 	if test "$dag_version" = 2.5.x; then
 		AC_DEFINE(HAVE_DAG_STREAMS_API, 1, [define if you have streams capable DAG API])
+		DAGLIBS="-ldag"
 	fi
 
 	# See if we can find a specific version string.
@@ -749,6 +750,11 @@ darwin*)
 	DYEXT="dylib"
 	V_CCOPT="$V_CCOPT -fno-common"
 	;;
+
+linux*)
+	V_CCOPT="$V_CCOPT -fPIC"
+	;;
+
 esac
 
 AC_PROG_RANLIB
@@ -783,6 +789,7 @@ AC_SUBST(V_RANLIB)
 AC_SUBST(V_YACC)
 AC_SUBST(SSRC)
 AC_SUBST(DYEXT)
+AC_SUBST(DAGLIBS)
 
 AC_PROG_INSTALL
 
