--- a/config.h.in
+++ b/config.h.in
@@ -161,6 +161,15 @@
 /* /dev/dlpi directory */
 #undef PCAP_DEV_PREFIX
 
+/* if have usb sniffing support */
+#undef PCAP_SUPPORT_USB
+
+/* if have usb sniffing support */
+#undef PCAP_SUPPORT_USB
+
+/* if have usb sniffing support */
+#undef PCAP_SUPPORT_USB
+
 /* Define to 1 if you have the ANSI C header files. */
 #undef STDC_HEADERS
 
