--- a/Makefile.in
+++ b/Makefile.in
@@ -17,7 +17,7 @@
 #  WARRANTIES, INCLUDING, WITHOUT LIMITATION, THE IMPLIED WARRANTIES OF
 #  MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE.
 #
-# @(#) $Header: /tcpdump/master/libpcap/Makefile.in,v 1.103 2006-10-04 16:50:33 guy Exp $ (LBL)
+# @(#) $Header: /tcpdump/master/libpcap/Makefile.in,v 1.104 2006-10-04 18:09:22 guy Exp $ (LBL)
 
 #
 # Various configurable paths (remember to edit Makefile.in, not Makefile)
@@ -186,13 +186,23 @@ install: libpcap.a
 	$(RANLIB) $(DESTDIR)$(libdir)/libpcap.a
 	[ -d $(DESTDIR)$(includedir) ] || \
 	    (mkdir -p $(DESTDIR)$(includedir); chmod 755 $(DESTDIR)$(includedir))
+	[ -d $(DESTDIR)$(includedir)/pcap ] || \
+	    (mkdir -p $(DESTDIR)$(includedir)/pcap; chmod 755 $(DESTDIR)$(includedir)/pcap)
+	$(INSTALL_DATA) $(srcdir)/pcap/pcap.h \
+	    $(DESTDIR)$(includedir)/pcap/pcap.h
+	$(INSTALL_DATA) $(srcdir)/pcap/bpf.h \
+	    $(DESTDIR)$(includedir)/pcap/bpf.h
+	$(INSTALL_DATA) $(srcdir)/pcap/namedb.h \
+	    $(DESTDIR)$(includedir)/pcap/namedb.h
+	$(INSTALL_DATA) $(srcdir)/pcap/sll.h \
+	    $(DESTDIR)$(includedir)/pcap/sll.h
+	$(INSTALL_DATA) $(srcdir)/pcap/usb.h \
+	    $(DESTDIR)$(includedir)/pcap/usb.h
 	$(INSTALL_DATA) $(srcdir)/pcap.h $(DESTDIR)$(includedir)/pcap.h
 	$(INSTALL_DATA) $(srcdir)/pcap-bpf.h \
 	    $(DESTDIR)$(includedir)/pcap-bpf.h
 	$(INSTALL_DATA) $(srcdir)/pcap-namedb.h \
 	    $(DESTDIR)$(includedir)/pcap-namedb.h
-	$(INSTALL_DATA) $(srcdir)/pcap-usb.h \
-	    $(DESTDIR)$(includedir)/pcap-usb.h
 	[ -d $(DESTDIR)$(mandir)/man3 ] || \
 		(mkdir -p $(DESTDIR)$(mandir)/man3; chmod 755 $(DESTDIR)$(mandir)/man3)
 	$(INSTALL_DATA) $(srcdir)/pcap.3 \
@@ -207,6 +217,12 @@ install-shared-dylib: libpcap.dylib
 
 uninstall:
 	rm -f $(DESTDIR)$(libdir)/libpcap.a
+	rm -f $(DESTDIR)$(includedir)/pcap/pcap.h
+	rm -f $(DESTDIR)$(includedir)/pcap/bpf.h
+	rm -f $(DESTDIR)$(includedir)/pcap/namedb.h
+	rm -f $(DESTDIR)$(includedir)/pcap/sll.h
+	rm -f $(DESTDIR)$(includedir)/pcap/usb.h
+	-rmdir $(DESTDIR)$(includedir)/pcap
 	rm -f $(DESTDIR)$(includedir)/pcap.h
 	rm -f $(DESTDIR)$(includedir)/pcap-bpf.h
 	rm -f $(DESTDIR)$(includedir)/pcap-namedb.h
