From Paolo Abeni: add support for the binary USB sniffing interface in Linux.  The USB sniffing code for Linux now supplies a per-packet header based on the one supplied by the Linux binary sniffing interface, so we add a new DLT_ value and use that.
Fix his e-mail address, and add him to the credits.

--- a/config.h.in
+++ b/config.h.in
@@ -134,6 +134,9 @@
 /* if unaligned access fails */
 #undef LBL_ALIGN
 
+/* path for device for USB sniffing */
+#undef LINUX_USB_MON_DEV
+
 /* Define to 1 if netinet/ether.h declares `ether_hostton' */
 #undef NETINET_ETHER_H_DECLARES_ETHER_HOSTTON
 
