Check for "/dev/bpf"; if we find it, use BPF as the capture mechanism, and assume it's a cloning device.

--- a/config.h.in
+++ b/config.h.in
@@ -10,6 +10,9 @@
 /* Enable optimizer debugging */
 #undef BDEBUG
 
+/* define if you have a cloning BPF device */
+#undef HAVE_CLONING_BPF
+
 /* define if you have the DAG API */
 #undef HAVE_DAG_API
 
