--- a/configure.in
+++ b/configure.in
@@ -1,4 +1,4 @@
-dnl @(#) $Header: /tcpdump/master/libpcap/configure.in,v 1.135 2007-06-11 10:04:24 guy Exp $ (LBL)
+dnl @(#) $Header: /tcpdump/master/libpcap/configure.in,v 1.136 2007-06-15 17:55:50 guy Exp $ (LBL)
 dnl
 dnl Copyright (c) 1994, 1995, 1996, 1997
 dnl	The Regents of the University of California.  All rights reserved.
@@ -6,7 +6,7 @@ dnl
 dnl Process this file with autoconf to produce a configure script.
 dnl
 
-AC_REVISION($Revision: 1.135 $)
+AC_REVISION($Revision: 1.136 $)
 AC_PREREQ(2.50)
 AC_INIT(pcap.c)
 
@@ -184,6 +184,12 @@ AC_ARG_WITH(pcap, [  --with-pcap=TYPE        use packet capture TYPE])
 AC_MSG_CHECKING(packet capture type)
 if test ! -z "$with_pcap" ; then
 	V_PCAP="$withval"
+elif test -r /dev/bpf ; then
+	#
+	# Cloning BPF device.
+	#
+	V_PCAP=bpf
+	AC_DEFINE(HAVE_CLONING_BPF,1,[define if you have a cloning BPF device])
 elif test -r /dev/bpf0 ; then
 	V_PCAP=bpf
 elif test -r /usr/include/net/pfilt.h ; then
