--- a/config.h.in
+++ b/config.h.in
@@ -56,6 +56,9 @@
 /* Define to 1 if you have the <netinet/if_ether.h> header file. */
 #undef HAVE_NETINET_IF_ETHER_H
 
+/* Define to 1 if you have the <net/pfvar.h> header file. */
+#undef HAVE_NET_PFVAR_H
+
 /* if there's an os_proto.h */
 #undef HAVE_OS_PROTO_H
 
