SITA ACN support, from Fulko Hew.

--- a/configure.in
+++ b/configure.in
@@ -1,4 +1,4 @@
-dnl @(#) $Header: /tcpdump/master/libpcap/configure.in,v 1.138 2007-10-04 23:06:25 guy Exp $ (LBL)
+dnl @(#) $Header: /tcpdump/master/libpcap/configure.in,v 1.139 2007-10-20 01:15:14 guy Exp $ (LBL)
 dnl
 dnl Copyright (c) 1994, 1995, 1996, 1997
 dnl	The Regents of the University of California.  All rights reserved.
@@ -6,7 +6,7 @@ dnl
 dnl Process this file with autoconf to produce a configure script.
 dnl
 
-AC_REVISION($Revision: 1.138 $)
+AC_REVISION($Revision: 1.139 $)
 AC_PREREQ(2.50)
 AC_INIT(pcap.c)
 
@@ -371,6 +371,13 @@ linux)
 		AC_MSG_ERROR(version 2 or higher required; see the INSTALL doc for more info)
 	fi
 	AC_LBL_TPACKET_STATS
+	AC_ARG_WITH(sita, [  --with-sita             include SITA support],
+	[
+		AC_DEFINE(SITA,1,[include ACN support])
+		SSRC="pcap-sita.c"
+		AC_MSG_NOTICE(Enabling SITA ACN support)
+		V_FINDALLDEVS=sita
+	])
 	;;
 
 dag)
