--- a/config.h.in
+++ b/config.h.in
@@ -182,6 +182,9 @@
 /* target host supports USB sniffing */
 #undef PCAP_SUPPORT_USB
 
+/* include ACN support */
+#undef SITA
+
 /* Define to 1 if you have the ANSI C header files. */
 #undef STDC_HEADERS
 
