Add a wrapper around Lex/Flex; that lets us handle Lex's lack of support for -o and Flex's support for it in a way that lets us more easily fail if Lex/Flex fails (so that we don't try to compile a bogus scanner.c that might be generated; that appears to have happened on at least one occasion, with the resulting scanner.o missing some functions, causing weird errors in configure scripts for programs using libpcap), and also prepares us to handle newer versions of Flex where we want Flex to generate a header file so we don't get "defined but not declared" warnings.

--- a/Makefile.in
+++ b/Makefile.in
@@ -17,7 +17,7 @@
 #  WARRANTIES, INCLUDING, WITHOUT LIMITATION, THE IMPLIED WARRANTIES OF
 #  MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE.
 #
-# @(#) $Header: /tcpdump/master/libpcap/Makefile.in,v 1.108 2007-07-24 02:36:34 mcr Exp $ (LBL)
+# @(#) $Header: /tcpdump/master/libpcap/Makefile.in,v 1.109 2007-12-30 00:28:17 guy Exp $ (LBL)
 
 #
 # Various configurable paths (remember to edit Makefile.in, not Makefile)
@@ -90,7 +90,7 @@ OBJ =	$(PSRC:.c=.o) $(FSRC:.c=.o) $(CSRC:.c=.o) $(SSRC:.c=.o) $(GENSRC:.c=.o) $(
 HDR =	pcap.h pcap-int.h pcap-namedb.h pcap-nit.h pcap-pf.h \
 	ethertype.h gencode.h gnuc.h
 GENHDR = \
-	tokdefs.h version.h
+	scanner.h tokdefs.h version.h
 
 TAGHDR = \
 	pcap-bpf.h
@@ -126,7 +126,7 @@ libpcap.dylib: $(OBJ)
 
 scanner.c: $(srcdir)/scanner.l
 	@rm -f $@
-	$(LEX) -t $< > $$$$.$@; mv $$$$.$@ $@
+	./runlex.sh "$(LEX)" -o$@ $<
 
 scanner.o: scanner.c tokdefs.h
 	$(CC) $(CFLAGS) -c scanner.c
