Check for u_int64_t and define it as "unsigned long long" if we don't have it; we use it in the USB pseudo-header.

--- a/config.h.in
+++ b/config.h.in
@@ -212,5 +212,8 @@
 /* if we have u_int32_t */
 #undef u_int32_t
 
+/* if we have u_int64_t */
+#undef u_int64_t
+
 /* if we have u_int8_t */
 #undef u_int8_t
